--- a/src/pages/recipe/Recipe.css
+++ b/src/pages/recipe/Recipe.css
@@ -17,7 +17,7 @@
 .recipe li {
     list-style-type: none;
     margin-right: 10px;
-    color: #777;
+    /* color: #777; */
 }
 
 .recipe li::after {
@@ -31,3 +31,10 @@
     text-align: left;
     line-height: 1.5em;
 }
+
+/* dark mode */
+.recipe.dark {
+    background: #555;
+    color: #e4e4e4;
+    transition: all .3s ease-in-out;
+  }
