--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,7 @@
     background: #58249c;
     padding: 20px;
     color: #fff;
+    transition: all .3s ease-in-out;
   }
   .navbar nav {
     display: flex;
