--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -51,10 +51,10 @@
 }
 
 .recipe-list .card a {
-    color: #555;
     text-decoration: none;
     display: block;
     background: #e2e2e2;
+    color: #555;
     font-size: 0.9em;
     width: 100px;
     text-align: center;
@@ -62,4 +62,17 @@
     padding: 8px;
     border-radius: 4px;
     margin: 20px auto 0;
+    transition: all .3 ease-in-out;
+}
+
+/* dark mode */
+
+.recipe-list .card.dark {
+    background: #555;
+}
+
+.recipe-list .card.dark p,
+.recipe-list .card.dark h3,
+.recipe-list .card.dark div {
+    color: #e4e4e4;
 }
